data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3659.wast
;; 8. **Test Description**: Function with local variables that modify the stack, followed by a `call` instruction.    - **Constraint Checked**: Ensures local stack manipulations do not interfere with subsequent function calls.    - **Improper Handling**: Tests if local variable management disrupts the stack integrity expected by the `call` instruction.

(assert_invalid
  (module
    (func $type-local-vars-manipulation
      (local i32)
      (local.set 0 (i32.const 42))
      (call 1 (local.get 0))
    )
    (func (param i32))
  )
  "type mismatch"
)